Revision history for {{$dist->name}}

{{$NEXT}}
          - fix dist.ini munging done at release time (v0.013)
          - injected compile test now also checks files in examples/

0.013     2013-07-28 16:59:41 PDT-0700 (Karen Etheridge)
          - inserts --ignore-dir line into .ackrc at build time
          - when releasing this pluginbundle, dist.ini is edited (and
            committed) to force a dependency on the newly-released version, and
            all other local dist.inis using this bundle are also edited
            (without committing)
          - issue tracking is disabled in newly-created github repositories

0.012     2013-07-16 18:32:35 PDT-0700 (Karen Etheridge)
          - do not require trial versions of [Test::Compile], allowing
            flexibility as which we choose to build with

0.011     2013-07-05 17:59:57 PDT-0700 (Karen Etheridge)
          - compile test will also check for warnings, when author is testing

0.010     2013-06-28 11:28:01 PDT-0700 (Karen Etheridge)
          - t/00-check-deps.t test now has TODO tests for 'recommends' and
            'suggests' prereqs
          - release test for unused variables reinstated

0.009     2013-06-20 10:18:12 PDT-0700 (Karen Etheridge)
          - 'installer' now defaults to ModuleBuildTiny
          - (experimental) namespaces-are-clean release test added to minting
            profile, although this won't pass for many types of dists as many
            things are sloppy about modifying the package stash

0.008     2013-06-11 15:59:23 PDT-0700 (Karen Etheridge)
          - fix bad templating in minted module
          - during minting, push the initial commit to github after creating
            the remote

0.007     2013-05-29 18:48:34 PDT-0700 (Karen Etheridge)
          - minting profile updates:
            - extra kwalitee tests enabled by default
            - test now has 'use <main module>;', prefers done_testing,
              and now fails, rather than not compiling